feat: reorganize workspace with dedicated schema directory
- Create schema/ directory with organized subdirectories:
  * tables/ - Individual table schema files (JSON)
  * database_tables/ - HTML documentation for tables
  * catalogs/ - CSV catalog files (column_catalog.csv, table_catalog.csv)
  * docs/ - Schema documentation (database_schema.md, database_schema.json)

- Move all schema-related files from root to schema/:
  * db_index.json → schema/db_index.json
  * tables/* → schema/tables/*
  * database_tables/* → schema/database_tables/*
  * column_catalog.csv, table_catalog.csv → schema/catalogs/
  * database_schema.md, database_schema.json → schema/docs/

- Update code references:
  * mcp_server.py: Update schema file path to schema/db_index.json
  * .gitignore: Update paths to reflect new schema structure

- Add documentation:
  * schema/README.md: Document new directory structure and file purposes
  * README.md: Add project structure section showing new organization

- Clean up empty directories after file moves

Improves maintainability, scalability, and organization of schema files
while maintaining backward compatibility with MCP server functionality.

--- a/.gitignore
+++ b/.gitignore
@@ -48,13 +48,13 @@ mcp_server.log
 *.sqlite
 
 # Database schema and table files (generated content)
-db_index.json
-tables/
-database_tables/
-column_catalog.csv
-table_catalog.csv
-database_schema.md
-database_schema.json
+schema/db_index.json
+schema/tables/
+schema/database_tables/
+schema/catalogs/column_catalog.csv
+schema/catalogs/table_catalog.csv
+schema/docs/database_schema.md
+schema/docs/database_schema.json
 
 # Oracle client files (if any)
 oracle_client/
